--- a/css/custom_calendar.css
+++ b/css/custom_calendar.css
@@ -159,7 +159,9 @@
 .fc-calendar .fc-row > div:empty {
 	background: transparent;
 }
-
+.fc-calendar .fc-row > .fc-content{
+	background: #8E24AA;
+}
 .fc-calendar .fc-row > div > span.fc-date {
 	top: 50%;
 	left: 50%;
@@ -169,40 +171,21 @@
 	font-weight: 400;
 	pointer-events: none;
 }
+.fc-calendar .fc-row > .fc-content > span.fc-date {
+	color: #fff;
+}
+.fc-calendar .fc-row > .fc-content:hover > span.fc-date{
+	color: #8E24AA;
+} 
 
 .fc-calendar .fc-row > div.fc-today {
 	background: #BA68C8;
-	box-shadow: inset 0 -2px 2px #8E24AA;
+	box-shadow: inset 0 -3px 5px #8E24AA;
 }
 
 .fc-calendar .fc-row > div.fc-today > span.fc-date {
 	color: #fff;
 	text-shadow: 0 1px 1px rgba(0,0,0,0.1);
-}
-
-.fc-calendar .fc-row > div.fc-content:after {
-	content: '\00B7';
-    text-align: center;
-    width: 30px;
-    margin-left: 0px;
-    position: absolute;
-    color: #DDD;
-    font-size: 100px;
-    line-height: 30px;
-    right: 0px;
-    top: 0px;
-}
-
-.fc-calendar .fc-row > div.fc-today.fc-content:after {
-	color: #fff;
-}
-
-.fc-calendar .fc-row > div.fc-content:hover:after{
-	color: #8E24AA;
-}
-
-.fc-calendar .fc-row > div.fc-today.fc-content:hover:after{
-	color: #fff;
 }
 
 .fc-calendar .fc-row > div > div a,
